deploy/kubernetes/manifests/catalogue-db-dep.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  labels: 
    name: catalogue-db
  name: catalogue-db
  namespace: sock-shop
spec: 
  replicas: 1
  template: 
    metadata: 
      labels: 
        name: catalogue-db
    spec: 
      containers: 
        - 
          args: 
            - "--ignore-db-dir=lost+found"
          image: "weaveworksdemos/catalogue-db:0.3.0"
          name: catalogue-db
          ports: 
            - 
              containerPort: 3306
              name: mysql
          resources: 
            limits: 
              cpu: 200m
              memory: 800Mi
            requests: 
              cpu: 100m
              memory: 300Mi
          volumeMounts: 
            - 
              mountPath: /var/lib/mysql
              name: socks-catalogue-db
      volumes: 
        - 
          name: socks-catalogue-db
          persistentVolumeClaim: 
            claimName: socks-catalogue-db
