deploy/kubernetes/manifests/front-end-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  backend:
    serviceName: front-end
    servicePort: 80
